mdapipkg/objects/Appointment__c.object
<CustomObject>
    <description>Appointments related to Treatments such as Apheresis, Plant or Infusion</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>APH Center, Plant or Infusion Center, the appointment is related to</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AppointmentDate__c</fullName>
        <inlineHelpText>Appointments Date either for APH Pick, Plant Start or INF Delivery</inlineHelpText>
        <label>Appointment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Appointment counter</inlineHelpText>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExternalIdIntegration__c</fullName>
        <description>External Id for active appointments used by integration
format: [&apos;APH&apos;,&apos;PLANT&apos;,&apos;INF&apos;]_{!Case.TreatmentKey}</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id for integrations</inlineHelpText>
        <label>External Id Integration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>True indicates that treatment is the currently active one of this type</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Material</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVSOrderNumber__c</fullName>
        <inlineHelpText>Purchase, Process or Sales Order Number</inlineHelpText>
        <label>NVS Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlannedOrderNumber__c</fullName>
        <label>Planned Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantAppointmentSlot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Appointment Slot</label>
        <referenceTo>PlantAppointmentSlot__c</referenceTo>
        <relationshipLabel>Appointments</relationshipLabel>
        <relationshipName>Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Apheresis_Pickup__c</fullName>
        <label>Status - Apheresis Pickup</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apheresis - Waiting Confirmation</fullName>
                    <default>true</default>
                    <label>Apheresis - Waiting Confirmation</label>
                </value>
                <value>
                    <fullName>Apheresis - Planned Pickup</fullName>
                </value>
                <value>
                    <fullName>Apheresis Material - Goods Received</fullName>
                </value>
                <value>
                    <fullName>Apheresis Material - Goods Receipt Reversed</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Picked up</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Pickup Cancelled</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Batch Released</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Batch Release Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Apheresis_Procedure__c</fullName>
        <label>Status - Apheresis Procedure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apheresis - To be confirmed</fullName>
                    <default>true</default>
                    <label>Apheresis - To be confirmed</label>
                </value>
                <value>
                    <fullName>Apheresis - Completed</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Interrupted</fullName>
                </value>
                <value>
                    <fullName>Apheresis - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Cell_Processing__c</fullName>
        <label>Status - Cell Processing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cell Processing - Waiting Confirmation</fullName>
                    <default>true</default>
                    <label>Cell Processing - Waiting Confirmation</label>
                </value>
                <value>
                    <fullName>Cell Processing - Planned</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Started</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Start Reversed</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Completed</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Completion Reversed</fullName>
                </value>
                <value>
                    <fullName>Primary Product - QA Released</fullName>
                </value>
                <value>
                    <fullName>Primary Product - QA Release Reversed</fullName>
                </value>
                <value>
                    <fullName>Cell Processing - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Finished_Product_Delivery__c</fullName>
        <label>Status - Finished Product Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finished Product Delivery - Waiting Confirmation</fullName>
                    <default>true</default>
                    <label>Finished Product Delivery - Waiting Confirmation</label>
                </value>
                <value>
                    <fullName>Finished Product Delivery - Planned</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released from Manufacturing Plant</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released from Manufacturing Plant Reversed</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped from Manufacturing Plant</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped from Manufacturing Plant Reversed</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Received</fullName>
                </value>
                <value>
                    <fullName>Finished Product Delivery - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released by Novartis</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Released by Novartis Reversed</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped to Treatment Center</fullName>
                </value>
                <value>
                    <fullName>Finished Product - Shipped to Treatment Center Reversed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Overall_Infusion__c</fullName>
        <label>Status - Overall Infusion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Infusion - Not Started</fullName>
                    <default>true</default>
                    <label>Infusion - Not Started</label>
                </value>
                <value>
                    <fullName>Infusion - In Progress</fullName>
                </value>
                <value>
                    <fullName>Infusion - Completed</fullName>
                </value>
                <value>
                    <fullName>Infusion - Interrupted</fullName>
                </value>
                <value>
                    <fullName>Infusion - Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Overall_Treatment__c</fullName>
        <label>Status - Overall Treatment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Plant_Appointment__c</fullName>
        <label>Status - Plant Appointment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Allocated - Waiting Confirmation</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Reserved - Waiting Confirmation</fullName>
                </value>
                <value>
                    <fullName>Reserved - Rejected</fullName>
                </value>
                <value>
                    <fullName>Reserved - Approved</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Overall status of the appointment</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Appointment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AppointmentDate__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Appointment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <recordTypes>
        <fullName>Apheresis</fullName>
        <active>true</active>
        <description>Apheresis Appointment for extracting patients blood/cells</description>
        <label>Apheresis Appointment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Infusion</fullName>
        <active>true</active>
        <description>Appointment for Infusion of engineered blood into the patient</description>
        <label>Infusion Appointment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plant</fullName>
        <active>true</active>
        <description>Plant Appointment for processing the patients blood (Cell Processing)</description>
        <label>Plant Appointment</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>